--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "test": "NODE_ENV=test mocha"
+    "test": "NODE_ENV=test jest --watch"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -18,8 +18,7 @@
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.0.0",
+    "jest": "^24.1.0",
     "nodemon": "^1.18.10",
     "supertest": "^3.4.2"
   }
